[package]
name = "alox"
version = "0.1.0"
authors = ["Jadon Fowler <j@jadon.io>"]
edition = "2018"

[lib]
name = "alox"
path = "src/lib.rs"

[[bin]]
name = "alox"
path = "src/main.rs"

[features]
default = ["cuda/cuda_10_0"]

[build-dependencies]
#lalrpop = "0.17.1"

[dependencies]
lazy_static = "1.3.0"
logos = "0.9.7"
cranelift-codegen = "0.51.0"
cranelift-frontend = "0.51.0"
cranelift-faerie = "0.51.0"
cranelift-module = "0.51.0"
cuda = "0.4.0-pre.2"
rspirv = "0.5.4"
spirv_headers = "1.3.4"
#pest = "2.0"
#pest_derive = "2.0"
#lalrpop-util = "0.17.1"
#regex = "0.2.1"
