[package]
name = "alox"
version = "0.1.0"
authors = ["Jadon Fowler <j@jadon.io>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

[lib]
name = "alox"
path = "src/lib.rs"

[[bin]]
name = "alox"
path = "src/main.rs"

[features]
default = ["cuda/cuda_10_0"]

[build-dependencies]
lalrpop = "0.18.1"

[dependencies]
lazy_static = "1.3.0"
cranelift-codegen = "0.51.0"
cranelift-frontend = "0.51.0"
cranelift-faerie = "0.51.0"
cranelift-module = "0.51.0"
cuda = "0.4.0-pre.2"
rspirv = "0.5.4"
spirv_headers = "1.3.4"
lalrpop = { version = "0.18.1", features = ["lexer"] }
lalrpop-util = "0.18.1"
regex = "1"
codespan = "0.9.2"
codespan-reporting = "0.9.2"
